tests/testcases/valid/13_null_and_checks.ciel
int main() {
    int* ptr = 0;
    bool is_null = ptr == 0;
    return 0;
}
