tests/testcases/invalid/lexical/05_unterminated_string_eof.ciel
int main() {
    char* s = "no close...
}
